Integrating compactString
Also added the connection string to a new backup cluster on mongo in case memory runs out